Fix black bar on mobile

--- a/assets/sass/homepage.scss
+++ b/assets/sass/homepage.scss
@@ -45,6 +45,11 @@
   }
 }
 
+.about-me-container {
+  margin-top: -70px;
+  padding-top: 90px !important;
+}
+
 .about-me {
   letter-spacing: 1px;
   font-size: 18px;
